--- a/style.css
+++ b/style.css
@@ -17,13 +17,13 @@ html {
 
 img {
     width: 100%;
-    height: 100%;
+    height: auto;
     object-fit: cover;
 }
 
 section {
-    padding: 10rem 0;
-    min-height: 100vh;
+    padding: 7rem 0;
+    /* min-height: 100vh; */
     width: 100%;
     display: flex;
     align-items: center;
@@ -36,4 +36,95 @@ section {
     max-width: 120rem;
     height: auto;
     margin: 0 auto;
+}
+
+.brand {
+    color: aliceblue;
+    font-size: 4rem;
+    font-weight: 600;
+    text-align: center;
+    margin-bottom: 2rem;
+}
+
+.input-form {
+    width: 90%;
+    text-align: center;
+    margin: 0 auto;
+    position: relative;
+}
+
+.user-input {
+    width: 90%;
+    font-size: 2rem;
+    font-weight: 500;
+    padding: 1rem 2rem;
+    color: #181818;
+    background-color: aliceblue;
+    border-radius: .8rem;
+    border: none;
+}
+
+.search-icon {
+    width: 15%;
+    position: absolute;
+    color: #181818;
+    top: 25%;
+    right: 0;
+}
+.search-icon i {
+    font-size: 2rem;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+.user-input:focus {
+    outline: none;
+    box-shadow: none;
+    border: none;
+}
+
+.search-result {
+    margin-top: 4rem;
+    display: grid;
+    grid-gap: 3rem;
+    grid-template: auto / repeat(auto-fit, minmax(25rem, 1fr));
+}
+
+.item {
+    border-radius: .7rem;
+    overflow: hidden;
+}
+
+.item-footer {
+    background: aliceblue;
+    color: #181818;
+    padding: 1.5rem 2rem 3rem 2rem;
+}
+
+.food-title {
+    font-size: 2.4rem;
+    font-weight: 600;
+    margin-bottom: 1rem;
+}
+
+.food-desc {
+    font-size: 1.6rem;
+    font-weight: 300;
+    margin-bottom: 2rem;
+}
+
+.view-btn {
+    font-size: 1.6rem;
+    font-weight: 600;
+    text-decoration: none;
+    color: aliceblue;
+    background: #181818;
+    padding: 0.8rem 2rem;
+    border-radius: 0.3rem;
+    cursor: pointer;
+    transition: all 0.5s ease;
+}
+
+.view-btn:hover {
+    background: orangered;
 }
